[package]
name = "fmt_duration"
version = "0.1.0"
authors = ["Steelbirdy <patrickammons@comcast.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", default-features = false }
logos = "0.12.0"

[dev-dependencies]
test-case = "1.1.0"